Changes since version 1.6-6

  * ercomp: re-written to be a more general framework.
  * plm: * new argument weights added.
         * nested random effects models implemented (Baltagi/Song/Jung (2001)),
           use effect = "nested".
         * fix backward compatibility for the (deprecated!) argument 'instruments'
           to estimate IV models (but rather use 2-part formulae for IV models).
         * gives an informative error message if all terms are dropped in an 
           estimation due to aliasing.
  * pbsytest:
      * test = "j": [joint test by Baltagi/Li(1991)]:
        fixed degrees of freedom (now df = 2 instead of df = 1).
      * unbalanced version of all statistics implemented (Sosa-Escudero/Bera (2008)).
      * new argument 're.normal' (only relevant for test = "re"): allows to compute
        the two-sided RE test when set to FALSE (default is TRUE which gives the
        one-sided RE test as before).
  * plm.data:
      * deprecated now (gives warning), use pdata.frame instead.
      * function internally uses pdata.frame now and then adjusts
        to get a "plm.dim" object as before. This way, plm.data
        benefits from bug fixes made previously to pdata.frame.
  * pdata.frame:
      * By default, the resulting pdata.frame is now closer to the original data:
         * columns with constant values and all-NA values are not removed anymore,
         * non-finite values are not substituted with NAs anymore,
         * unused factor levels are not dropped anymore (except for those
           variables serving to construct the index).
      * Arguments drop.NA.series, drop.const.series, replace.non.finite,
        drop.unused.levels introduced to remove/replace columns/values as described
        before (all default to FALSE).
  * punbalancedness: extended to calculate unbalancedness measures of nested panel 
                     structures as in Baltagi/Song/Jung (2001).