@@ -1,6 +1,7 @@
 Changes since version 1.6-6
 
   * ercomp: re-written to be a more general framework.
+  * Two-way fixed effects models for unbalanced panels faster.
   * plm: * new argument weights added.
          * nested random effects models implemented (Baltagi/Song/Jung (2001)),
            use effect = "nested".
@@ -271,7 +272,7 @@ Changes since version 1.5-16
                * unbalanced version of all test statistics implemented,
                * doc update with literature references to unbalanced tests,
                * if requested, the "kw" statistic is now also calculated as one-way ("individual" or "time"), 
-                 albeit they coincide with respective "bp" statistics.
+                 albeit it coincides with the respective "bp" statistic.
 	* pwtest: formula interface respects 'effect' argument, 'effect' argument now mentioned in doc.
 	* data set 'Wages': factor 'sex' re-leveled to c("male", "female") to match use in original paper.
 	* print.summary.plm: suppress printing of 'effects' argument in top line in case of 'pooling' model.
